# angel-engine

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  2code.json  AGENTS.md  Cargo.toml  README.md  WORKFLOW.md  biome.json  knip.json  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  turbo.json
crates/angel-engine/: AGENTS.md  Cargo.toml  README.md
crates/angel-engine-client/: Cargo.toml  README.md
crates/angel-engine-client-napi/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  package.json
crates/angel-engine-client-napi/examples/: angel-cli.mjs
crates/angel-engine-client-napi/src/: adapter.rs  exports.rs  lib.rs  types.rs
crates/angel-engine-client-napi/src/adapter/: acp.rs  codec.rs  js.rs  mod.rs  native_base.rs  runtime.rs  trace.rs
crates/angel-engine-client-napi/src/engine_client/: mod.rs  thread.rs
crates/angel-engine-client-napi/src/process_client/: mod.rs  task.rs
crates/angel-engine-client-napi/src/session/: mod.rs  task.rs
crates/angel-engine-client-napi/src/types/: client.rs  mod.rs  process.rs  session.rs  snapshot.rs
crates/angel-engine-client/docs/: agent-interaction-qa.md
crates/angel-engine-client/examples/: angel_cli.rs  scan_skills.rs
crates/angel-engine-client/examples/angel_cli/: elicitation.rs  render.rs  runtime.rs  session.rs  settings.rs
crates/angel-engine-client/src/: adapter.rs  client.rs  config.rs  core.rs  error.rs  event.rs  lib.rs  process.rs  process_manager.rs  runtime.rs  session.rs  settings.rs  skills.rs  snapshot.rs  thread.rs
crates/angel-engine-client/src/core/: conversation.rs  mod.rs  resolution.rs  settings_query.rs  transport.rs  types.rs
crates/angel-engine-client/src/event/: mod.rs  projection.rs
crates/angel-engine-client/src/session/: active_turn.rs  commands.rs  helpers.rs  lifecycle.rs  mod.rs  tests.rs  turn_collector.rs  types.rs
crates/angel-engine-client/src/snapshot/: catalog_history.rs  context_turn.rs  conversation.rs  display.rs  elicitation.rs  labels.rs  mod.rs  runtime.rs
crates/angel-engine-client/tests/: core_client.rs
crates/angel-engine-client/tests/core_client/: helpers.rs  history.rs  input.rs  lifecycle.rs  settings.rs  streaming.rs  thread_events.rs
crates/angel-engine/docs/: agent-ui-state-machine.md  angel-engine-state-machine-design.md  common-interface-audit.md  protocol-essential-subset.md  unified-agent-state-machine.md
crates/angel-engine/examples/: codex_shell.rs  kimi_shell.rs  opencode_shell.rs
crates/angel-engine/examples/common/: elicitation.rs  lifecycle.rs  mod.rs  plan_hints.rs  repl.rs  settings.rs  transport_io.rs
crates/angel-engine/src/: capabilities.rs  command.rs  error.rs  event.rs  ids.rs  mod.rs  protocol.rs  reducer.rs  settings.rs  state.rs  transport.rs
crates/angel-engine/src/reducer/: action_events.rs  command_planning.rs  context_effects.rs  context_events.rs  context_planning.rs  conversation_control_planning.rs  conversation_planning.rs  elicitation_events.rs  elicitation_planning.rs  event_dispatch.rs  event_helpers.rs  goal_planning.rs  history_events.rs  history_planning.rs  methods.rs  mod.rs  pending.rs  runtime_planning.rs  skills_planning.rs  turn_events.rs  turn_planning.rs  types.rs
crates/angel-engine/src/settings/: commands.rs
crates/angel-engine/src/state/: action.rs  context.rs  mod.rs  (+6 more)
crates/angel-engine/tests/: adversarial_protocol.rs  plan_mode.rs  process_smoke.rs
crates/angel-profiler/: Cargo.toml
crates/angel-profiler/src/: internal.rs  lib.rs  main.rs
crates/angel-provider/: AGENTS.md  Cargo.toml  build.rs
crates/angel-provider/examples/: codex_shell.rs  kimi_shell.rs  opencode_shell.rs
crates/angel-provider/src/: cline.rs  copilot.rs  cursor.rs  mod.rs  qoder.rs
crates/angel-provider/tests/: plan_mode.rs  process_smoke.rs
(+866 files in other folders)
