[package]
name = "angel-engine-client-napi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
angel-engine = { path = "../angel-engine" }
angel-engine-client = { path = "../angel-engine-client" }
angel-provider = { path = "../angel-provider" }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"
