[package]
name = "angel-engine-client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
angel-engine = { path = "../angel-engine" }
angel-provider = { path = "../angel-provider" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
test-cli = { path = "../test-cli" }
