[package]
name = "angel-engine-client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
cursor-history = ["angel-provider/cursor-history"]

[dependencies]
aghub-agents = { git = "https://github.com/AkaraChen/aghub" }
angel-engine = { path = "../angel-engine" }
angel-provider = { path = "../angel-provider" }
garde = { version = "0.23", features = ["derive"] }
listeners = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skill = { git = "https://github.com/AkaraChen/aghub" }
strum = { version = "0.28", features = ["derive"] }
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"
test-cli = { path = "../test-cli" }
