[package]
name = "angel-engine"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/mod.rs"

[dependencies]
garde = { version = "0.21", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
test-cli = { path = "../test-cli" }
