[package]
name = "angel-provider"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/mod.rs"

[features]
cursor-history = []

[dependencies]
angel-engine = { path = "../angel-engine" }
agent-client-protocol-schema = { version = "0.12.0", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
percent-encoding = "2.3.2"

[build-dependencies]
prettyplease = "0.3"
schemars = "0.8"
serde_json = "1"
syn = "2"
typify = { version = "0.7.0", default-features = false }

[dev-dependencies]
test-cli = { path = "../test-cli" }
